
[tool.poetry]
name = "bi-file-uploader"
version = "0.0.0"
description = ""
authors = ["Andrey Snytin <asnytin@yandex-team.ru>"]
packages = [{include = "bi_file_uploader"}]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
aiobotocore = ">=2.4.2"
aiogoogle = ">=5.2.0"
aiohttp = ">=3.8.1"
arq = ">=0.25.0"
attrs = ">=22.2.0"
docker = ">=6.0.1"
gunicorn = ">=20.1.0"
marshmallow = ">=3.19.0"
python = ">=3.10, <3.12"
sentry-sdk = ">=1.15.0"
datalens-version-ya = {path = "../../lib/dl_version_ya"}
yandex-bi-api-commons-ya-team = {path = "../../lib/bi_api_commons_ya_team"}
yandex-bi-api-commons-ya-cloud = {path = "../../lib/bi_api_commons_ya_cloud"}
bi-defaults = {path = "../../lib/bi_defaults"}
datalens-file-uploader-task-interface = {path = "../../mainrepo/lib/dl_file_uploader_task_interface"}
datalens-file-uploader-lib = {path = "../../mainrepo/lib/dl_file_uploader_lib"}
datalens-connector-bundle-chs3 = {path = "../../mainrepo/lib/dl_connector_bundle_chs3"}
datalens-configs = {path = "../../mainrepo/lib/dl_configs"}
datalens-core = {path = "../../mainrepo/lib/dl_core"}
datalens-file-uploader-api-lib = {path = "../../mainrepo/lib/dl_file_uploader_api_lib"}
datalens-task-processor = {path = "../../mainrepo/lib/dl_task_processor"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []


[datalens_ci]
skip_test = true


[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
