
[tool.poetry]
name = "bi-file-uploader-worker"
version = "0.143.0"
description = ""
authors = ["Andrey Snytin <asnytin@yandex-team.ru>"]
packages = [{include = "bi_file_uploader_worker"}]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
aiohttp = ">=3.8.1"
attrs = ">=22.2.0"
bi-defaults = {path = "../../lib/bi_defaults"}
gunicorn = "==20.1.0"
python = ">=3.10, <3.12"
yandex-bi-core = {path = "../../mainrepo/lib/bi_core"}
bi-file-secure-reader-lib = {path = "../../mainrepo/lib/bi_file_secure_reader_lib"}
bi-file-uploader-task-interface = {path = "../../mainrepo/lib/bi_file_uploader_task_interface"}
yandex-bi-file-uploader-worker-lib = {path = "../../mainrepo/lib/bi_file_uploader_worker_lib"}
bi-task-processor = {path = "../../mainrepo/lib/bi_task_processor"}

[[tool.mypy.overrides]]
module = "zope.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "aiogoogle.*"
follow_imports = "skip"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []

[tool.ruff]
line-length = 140
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.poetry.scripts]
file-uploader-worker = "bi_file_uploader_worker.app:run_standalone_worker"
file-uploader-worker-health-check = "bi_file_uploader_worker.app:run_health_check"
gunicorn = "gunicorn.app.wsgiapp:run"

[tool.black]
line-length = 140
target-version = ['py310']

[datalens_ci]
skip_test = true


[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[tools.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
