
[tool.poetry]
name = "yandex-bi-rqe-ext-async"
version = "0.0.0"
description = ""
authors = ["Sergei Borodin <seray@yandex-team.ru>"]
packages = [{include = "bi_rqe_ext_async"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
bi-connector-greenplum = {path = "../../mainrepo/lib/bi_connector_greenplum"}
gunicorn = ">=20.1.0"
python = ">=3.10, <3.12"
yandex-bi-connector-bitrix-gds = {path = "../../lib/bi_connector_bitrix_gds"}
yandex-bi-connector-gsheets = {path = "../../lib/bi_connector_gsheets"}
yandex-bi-connector-mysql = {path = "../../lib/bi_connector_mysql"}
yandex-bi-connector-postgresql = {path = "../../mainrepo/lib/bi_connector_postgresql"}
yandex-bi-connector-clickhouse = {path = "../../mainrepo/lib/bi_connector_clickhouse"}
yandex-bi-connector-promql = {path = "../../mainrepo/lib/bi_connector_promql"}
yandex-bi-core = {path = "../../mainrepo/lib/bi_core"}
dl-version-ya = {path = "../../lib/dl_version_ya"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []


[datalens_ci]
skip_test = true

[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[tool.poetry.scripts]
bi_rqe_ext_async = "bi_rqe_ext_async.app:app"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
