
[tool.poetry]
name = "yandex-bi-rqe-ext-async"
version = "0.0.0"
description = ""
authors = ["Sergei Borodin <seray@yandex-team.ru>"]
packages = [{include = "bi_rqe_ext_async"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
gunicorn = ">=20.1.0"
python = ">=3.10, <3.12"
yandex-bi-connector-bitrix-gds = {path = "../../lib/bi_connector_bitrix_gds"}
yandex-bi-connector-gsheets = {path = "../../lib/bi_connector_gsheets"}
yandex-bi-connector-mysql = {path = "../../lib/bi_connector_mysql"}
datalens-version-ya = {path = "../../lib/dl_version_ya"}
datalens-connector-promql = {path = "../../mainrepo/lib/dl_connector_promql"}
datalens-connector-postgresql = {path = "../../mainrepo/lib/dl_connector_postgresql"}
datalens-connector-clickhouse = {path = "../../mainrepo/lib/dl_connector_clickhouse"}
datalens-connector-greenplum = {path = "../../mainrepo/lib/dl_connector_greenplum"}
datalens-core = {path = "../../mainrepo/lib/dl_core"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []


[datalens_ci]
skip_test = true

[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[tool.poetry.scripts]
bi_rqe_ext_async = "bi_rqe_ext_async.app:app"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
