
[tool.poetry]
name = "yandex-bi-rqe-ext-sync"
version = "0.0.0"
description = ""
authors = ["Sergei Borodin <seray@yandex-team.ru>"]
packages = [{include = "bi_rqe_ext_sync"}]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10, <3.12"
uwsgi = ">=2.0.21"
yandex-bi-connector-metrica = {path = "../../lib/bi_connector_metrica"}
yandex-bi-connector-mysql = {path = "../../lib/bi_connector_mysql"}
yandex-bi-connector-yql = {path = "../../lib/bi_connector_yql"}
yandex-bi-connector-oracle = {path = "../../lib/bi_connector_oracle"}
yandex-bi-connector-mssql = {path = "../../lib/bi_connector_mssql"}
datalens-version-ya = {path = "../../lib/dl_version_ya"}
datalens-connector-promql = {path = "../../mainrepo/lib/dl_connector_promql"}
datalens-connector-postgresql = {path = "../../mainrepo/lib/dl_connector_postgresql"}
datalens-connector-clickhouse = {path = "../../mainrepo/lib/dl_connector_clickhouse"}
datalens-connector-greenplum = {path = "../../mainrepo/lib/dl_connector_greenplum"}
datalens-connector-snowflake = {path = "../../mainrepo/lib/dl_connector_snowflake"}
datalens-core = {path = "../../mainrepo/lib/dl_core"}
datalens-connector-bigquery = {path = "../../mainrepo/lib/dl_connector_bigquery"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []


[datalens_ci]
skip_test = true

[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "firstmodule.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "secondmodule.*"
ignore_missing_imports = true
