
[tool.poetry]
name = "yandex-bi-rqe-int-sync"
version = "0.0.0"
description = ""
authors = ["Sergei Borodin <seray@yandex-team.ru>"]
packages = [{include = "bi_rqe_int_sync"}]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
bi-connector-greenplum = {path = "../../mainrepo/lib/bi_connector_greenplum"}
python = ">=3.10, <3.12"
uwsgi = ">=2.0.21"
yandex-bi-connector-metrica = {path = "../../lib/bi_connector_metrica"}
yandex-bi-connector-mysql = {path = "../../lib/bi_connector_mysql"}
yandex-bi-connector-yql = {path = "../../lib/bi_connector_yql"}
yandex-bi-connector-postgresql = {path = "../../mainrepo/lib/bi_connector_postgresql"}
yandex-bi-connector-clickhouse = {path = "../../mainrepo/lib/bi_connector_clickhouse"}
yandex-bi-core = {path = "../../mainrepo/lib/bi_core"}
yandex-bi-connector-oracle = {path = "../../lib/bi_connector_oracle"}
yandex-bi-connector-mssql = {path = "../../lib/bi_connector_mssql"}
dl-version-ya = {path = "../../lib/dl_version_ya"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []


[datalens_ci]
skip_test = true

[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
