
[tool.poetry]
name = "bi-test-project-worker"
version = "0.14.0"
description = ""
authors = ["Max Zuev <thenno@yandex-team.ru>"]
packages = [{include = "bi_test_project_worker"}]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
arq = ">=0.25.0"
attrs = ">=22.2.0"
bi-defaults = {path = "../../lib/bi_defaults"}
bi-task-processor = {path = "../../lib/bi_task_processor"}
bi-test-project-task-interface = {path = "../../lib/bi_test_project_task_interface"}
python = ">=3.10, <3.12"
yandex-bi-configs = {path = "../../lib/bi_configs"}
yandex-bi-core = {path = "../../lib/bi_core"}

[tool.poetry.group.tests.dependencies]
pytest = ">=7.2.2"
pytest-asyncio = ">=0.20.3"
yandex-bi-testing = {path = "../../lib/bi_testing"}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []

[tool.ruff]
line-length = 140
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.black]
line-length = 140
target-version = ['py310']



[datalens_ci]
skip_test = true


[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"
