
[tool.poetry]
name = "datalens-data-api"
version = "0.0.0"
description = ""
authors = ["DataLens Team <datalens-opensource@yandex-team.ru>"]
packages = [{include = "dl_data_api"}]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
aiohttp = ">=3.9.1"
python = ">=3.10, <3.13"
gunicorn = ">=21.2.0"
datalens-version = {path = "../../lib/dl_version"}
datalens-sqlalchemy-postgres = {path = "../../lib/dl_sqlalchemy_postgres"}
datalens-utils = {path = "../../lib/dl_utils"}
datalens-sqlalchemy-common = {path = "../../lib/dl_sqlalchemy_common"}
datalens-sqlalchemy-clickhouse = {path = "../../lib/dl_sqlalchemy_clickhouse"}
datalens-connector-postgresql = {path = "../../lib/dl_connector_postgresql"}
datalens-connector-clickhouse = {path = "../../lib/dl_connector_clickhouse"}
datalens-connector-chyt = {path = "../../lib/dl_connector_chyt"}
datalens-connector-ydb = {path = "../../lib/dl_connector_ydb"}
datalens-connector-mysql = {path = "../../lib/dl_connector_mysql"}
datalens-connector-greenplum = {path = "../../lib/dl_connector_greenplum"}
datalens-core = {path = "../../lib/dl_core"}
datalens-app-tools = {path = "../../lib/dl_app_tools"}
datalens-model-tools = {path = "../../lib/dl_model_tools"}
datalens-api-lib = {path = "../../lib/dl_api_lib"}
datalens-api-commons = {path = "../../lib/dl_api_commons"}
datalens-cache-engine = {path = "../../lib/dl_cache_engine"}
datalens-configs = {path = "../../lib/dl_configs"}
datalens-constants = {path = "../../lib/dl_constants"}
datalens-zitadel = {path = "../../lib/dl_zitadel", extras = ["zitadel"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []



[datalens_ci]
skip_test = true

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
