
[tool.poetry]
name = "dl-data-api"
version = "0.0.0"
description = ""
authors = ["DataLens Team <datalens-opensource@yandex-team.ru>"]
packages = [{include = "dl_data_api"}]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
aiohttp = ">=3.9.1"
python = ">=3.10, <3.13"
gunicorn = ">=21.2.0"
dl-version = {path = "../../lib/dl_version"}
dl-sqlalchemy-postgres = {path = "../../lib/dl_sqlalchemy_postgres"}
dl-utils = {path = "../../lib/dl_utils"}
dl-sqlalchemy-common = {path = "../../lib/dl_sqlalchemy_common"}
dl-sqlalchemy-clickhouse = {path = "../../lib/dl_sqlalchemy_clickhouse"}
dl-connector-postgresql = {path = "../../lib/dl_connector_postgresql"}
dl-connector-clickhouse = {path = "../../lib/dl_connector_clickhouse"}
dl-connector-chyt = {path = "../../lib/dl_connector_chyt"}
dl-connector-ydb = {path = "../../lib/dl_connector_ydb"}
dl-connector-metrica = {path = "../../lib/dl_connector_metrica"}
dl-connector-mysql = {path = "../../lib/dl_connector_mysql"}
dl-connector-mssql = {path = "../../lib/dl_connector_mssql"}
dl-connector-greenplum = {path = "../../lib/dl_connector_greenplum"}
dl-core = {path = "../../lib/dl_core"}
dl-app-tools = {path = "../../lib/dl_app_tools"}
dl-model-tools = {path = "../../lib/dl_model_tools"}
dl-api-lib = {path = "../../lib/dl_api_lib"}
dl-api-commons = {path = "../../lib/dl_api_commons"}
dl-cache-engine = {path = "../../lib/dl_cache_engine"}
dl-configs = {path = "../../lib/dl_configs"}
dl-constants = {path = "../../lib/dl_constants"}
dl-zitadel = {path = "../../lib/dl_zitadel", extras = ["aiohttp"]}
dl-auth-native = {path = "../../lib/dl_auth_native", extras = ["aiohttp"]}
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []



[datalens_ci]
skip_test = true

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
