[tool.poetry]
authors = ["DataLens Team <datalens-opensource@yandex-team.ru>"]
description = ""
license = "Apache 2.0"
name = "dl-data-api"
packages = [{include = "dl_data_api"}]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
aiohttp = "*"
dl-api-commons = {path = "../../lib/dl_api_commons"}
dl-api-lib = {path = "../../lib/dl_api_lib"}
dl-app-tools = {path = "../../lib/dl_app_tools"}
dl-auth-native = {extras = ["aiohttp"], path = "../../lib/dl_auth_native"}
dl-cache-engine = {path = "../../lib/dl_cache_engine"}
dl-configs = {path = "../../lib/dl_configs"}
dl-connector-chyt = {path = "../../lib/dl_connector_chyt"}
dl-connector-clickhouse = {path = "../../lib/dl_connector_clickhouse"}
dl-connector-greenplum = {path = "../../lib/dl_connector_greenplum"}
dl-connector-metrica = {path = "../../lib/dl_connector_metrica"}
dl-connector-mssql = {path = "../../lib/dl_connector_mssql"}
dl-connector-mysql = {path = "../../lib/dl_connector_mysql"}
dl-connector-oracle = {path = "../../lib/dl_connector_oracle"}
dl-connector-postgresql = {path = "../../lib/dl_connector_postgresql"}
dl-connector-trino = {path = "../../lib/dl_connector_trino"}
dl-connector-ydb = {path = "../../lib/dl_connector_ydb"}
dl-constants = {path = "../../lib/dl_constants"}
dl-core = {path = "../../lib/dl_core"}
dl-model-tools = {path = "../../lib/dl_model_tools"}
dl-retrier = {path = "../../lib/dl_retrier"}
dl-sqlalchemy-clickhouse = {path = "../../lib/dl_sqlalchemy_clickhouse"}
dl-sqlalchemy-common = {path = "../../lib/dl_sqlalchemy_common"}
dl-sqlalchemy-postgres = {path = "../../lib/dl_sqlalchemy_postgres"}
dl-utils = {path = "../../lib/dl_utils"}
dl-version = {path = "../../lib/dl_version"}
dl-zitadel = {extras = ["aiohttp"], path = "../../lib/dl_zitadel"}
gunicorn = "*"
httpx = "*"
python = ">=3.10, <3.13"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "dl-connector-chyt",
  "dl-connector-clickhouse",
  "dl-connector-greenplum",
  "dl-connector-metrica",
  "dl-connector-mssql",
  "dl-connector-mysql",
  "dl-connector-oracle",
  "dl-connector-postgresql",
  "dl-connector-trino",
  "dl-connector-ydb",
  "dl-model-tools",
  "dl-sqlalchemy-clickhouse",
  "dl-sqlalchemy-common",
  "dl-sqlalchemy-postgres",
  "dl-utils",
  "gunicorn", # gunicorn is used in the Dockerfile
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-ra"
minversion = "6.0"
testpaths = []

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[datalens_ci]
skip_test = true
