[tool.poetry]
name = "nebius_control_api"
version = "0.2000.0"
description = ""
authors = ["Dmitry Fedorov <dmifedorov@nebius.com>", "Dmitry Nadein nadein@nebius.com"]
packages = [{ include = "control_api" }]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
blinker = ">=1.5"
raven = ">=6.10.0"
bi-api-lib-ya = {path = "../../lib/bi_api_lib_ya"}
yandex-bi-cloud-integration = {path = "../../lib/bi_cloud_integration"}
yandex-bi-connector-bundle_ch_frozen = {path = "../../lib/bi_connector_bundle_ch_frozen"}
yandex-bi-connector-bundle_partners = {path = "../../lib/bi_connector_bundle_partners"}
yandex-bi-connector-monitoring = {path = "../../lib/bi_connector_monitoring"}
yandex-bi-connector-mysql = {path = "../../lib/bi_connector_mysql"}
yandex-bi-connector-yql = {path = "../../lib/bi_connector_yql"}
yandex-bi-sqlalchemy-mysql = {path = "../../lib/bi_sqlalchemy_mysql"}
yandex-bi-sqlalchemy-solomon = {path = "../../lib/bi_sqlalchemy_solomon"}
yandex-bi-sqlalchemy-yq = {path = "../../lib/bi_sqlalchemy_yq"}
bi-connector-greenplum-mdb = {path = "../../lib/bi_connector_greenplum_mdb"}
bi-connector-postgresql-mdb = {path = "../../lib/bi_connector_postgresql_mdb"}
yandex-bi-connector-mssql = {path = "../../lib/bi_connector_mssql"}
yandex-bi-connector-oracle = {path = "../../lib/bi_connector_oracle"}
datalens-sqlalchemy-postgres = {path = "../../mainrepo/lib/dl_sqlalchemy_postgres"}
datalens-sqlalchemy-common = {path = "../../mainrepo/lib/dl_sqlalchemy_common"}
datalens-connector-promql = {path = "../../mainrepo/lib/dl_connector_promql"}
datalens-connector-bundle-chs3 = {path = "../../mainrepo/lib/dl_connector_bundle_chs3"}
datalens-sqlalchemy-clickhouse = {path = "../../mainrepo/lib/dl_sqlalchemy_clickhouse"}
datalens-connector-clickhouse = {path = "../../mainrepo/lib/dl_connector_clickhouse"}
datalens-sqlalchemy-chyt = {path = "../../mainrepo/lib/dl_sqlalchemy_chyt"}
datalens-sqlalchemy-mssql = {path = "../../mainrepo/lib/dl_sqlalchemy_mssql"}
datalens-sqlalchemy-promql = {path = "../../mainrepo/lib/dl_sqlalchemy_promql"}
datalens-connector-snowflake = {path = "../../mainrepo/lib/dl_connector_snowflake"}
datalens-app-tools = {path = "../../mainrepo/lib/dl_app_tools"}
datalens-model-tools = {path = "../../mainrepo/lib/dl_model_tools"}
datalens-api-lib = {path = "../../mainrepo/lib/dl_api_lib"}
datalens-connector-bigquery = {path = "../../mainrepo/lib/dl_connector_bigquery"}
datalens-version-ya = {path = "../../lib/dl_version_ya"}
service-registry-nebius = {path = "../../lib/bi_service_registry_nebius"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []

[datalens_ci]
skip_test = true

[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true