
[tool.poetry]
name = "yandex-bi-data-api-os"
version = "0.1970.0"
description = ""
authors = ["Dmitry Fedorov <dmifedorov@yandex-team.ru>", "Aleksei Konstantinov konstasa@yandex-team.ru"]
packages = [{include = "app_os_data_api"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
yandex-bi-utils = {path = "../../lib/bi_utils"}
yandex-bi-app-tools = {path = "../../lib/bi_app_tools"}
yandex-bi-api-lib = {path = "../../lib/bi_api_lib"}
yandex-bi-dls-client = {path = "../../lib/bi_dls_client"}
yandex-bi-connector-clickhouse = {path = "../../lib/bi_connector_clickhouse"}
yandex-bi-connector-postgresql = {path = "../../lib/bi_connector_postgresql"}
yandex-bi-core = {path = "../../lib/bi_core"}
yandex-bi-model-tools = {path = "../../lib/bi_model_tools"}
yandex-bi-sqlalchemy-common = {path = "../../lib/bi_sqlalchemy_common"}
yandex-bi-sqlalchemy-clickhouse = {path = "../../lib/bi_sqlalchemy_clickhouse"}
yandex-bi-sqlalchemy-postgres = {path = "../../lib/bi_sqlalchemy_postgres"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []

[tool.ruff]
line-length = 140
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.black]
line-length = 140
target-version = ['py310']

[datalens_ci]
skip_test = true

[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"
